# py-workspace-template

./: .gitignore  README.md  poetry.toml  pyproject.toml
.github/workflows/: lint.yml
