[tool.poetry]
name = "python-workspace-template"
version = "0.1.0"
description = ""
authors = ["nedhmn"]
readme = "README.md"
packages = [
    { from = ".", include = "**/*.py" }
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.4"
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
